--- a/info.html
+++ b/info.html
@@ -71,61 +71,15 @@
         <div><p>Municipio:  </p></div>
         <div class="h4 text-secondary" ><p class=" font-weight-bold " id="municipio1">La paz</p></div>
         <div><p>Nivel de contaminación: </p></div>
-        <div class="h4 text-secondary d-inline" ><p class=" font-weight-bold  d-inline" id="nivel1">10 </p><p class="d-inline"> NPM/100</p></div>
+        <div class="h4 text-secondary d-inline" ><p class=" font-weight-bold  d-inline" id="nivel1">10 </p></div>
         <div><p>Estado de la playa: </p></div>
         <div class="h4 text-secondary" ><p class=" font-weight-bold " id="status1">APTO</p></div></div>
         <div class="col-6  text-center  ">
             <IMG  id="img1"src="./assets/playa-balandra.jpg" width="400px"></IMG>
         </div>
         <hr>
-        <!--playa 2-->
-    <div class="row align-items-center mt-5">
-        <div class="col-1"></div>
-        <div class=" col-4 mx-5"><div><p>Nombre de la playa: </p></div>
-        <div class="h4 text-info " ><p class=" font-weight-bold " id="playa2"></p></div>
-        <div><p>Municipio:  </p></div>
-        <div class="h4 text-secondary" ><p class=" font-weight-bold " id="municipio2"></p></div>
-        <div><p>Nivel de contaminación: </p></div>
-        <div class="h4 text-secondary d-inline" ><p class=" font-weight-bold  d-inline" id="nivel2"> </p><p class="d-inline"> NPM/100</p></div>
-        <div><p>Estado de la playa: </p></div>
-        <div class="h4 text-secondary" ><p class=" font-weight-bold " id="status2"></p></div></div>
-        <div class="col-6  text-center  ">
-            <IMG  id="img2"src="./assets/playa-balandra.jpg" width="400px"></IMG>
-        </div>
        
-       <div class="mt-4"> <hr></div>
-        <!--playa 3-->
-    <div class="row align-items-center mt-5">
-        <div class="col-1"></div>
-        <div class=" col-4 mx-5"><div><p>Nombre de la playa: </p></div>
-        <div class="h4 text-info " ><p class=" font-weight-bold " id="playa3"></p></div>
-        <div><p>Municipio:  </p></div>
-        <div class="h4 text-secondary" ><p class=" font-weight-bold " id="municipio3"></p></div>
-        <div><p>Nivel de contaminación: </p></div>
-        <div class="h4 text-secondary d-inline" ><p class=" font-weight-bold  d-inline" id="nivel3"></p><p class="d-inline"> NPM/100</p></div>
-        <div><p>Estado de la playa: </p></div>
-        <div class="h4 text-secondary" ><p class=" font-weight-bold " id="status3"></p></div></div>
-        <div class="col-6  text-center  ">
-            <IMG  id="img3"src="./assets/playa-balandra.jpg" width="400px"></IMG>
-        </div>
-        <div class="mt-4"> <hr></div>
-        <!--playa 4-->
-    <div class="row align-items-center mt-5">
-        <div class="col-1"></div>
-        <div class=" col-4 mx-5"><div><p>Nombre de la playa: </p></div>
-        <div class="h4 text-info " ><p class=" font-weight-bold " id="playa4"></p></div>
-        <div><p>Municipio:  </p></div>
-        <div class="h4 text-secondary" ><p class=" font-weight-bold " id="municipio4"></p></div>
-        <div><p>Nivel de contaminación: </p></div>
-        <div class="h4 text-secondary d-inline" ><p class=" font-weight-bold  d-inline" id="nive41"></p><p class="d-inline"> NPM/100</p></div>
-        <div><p>Estado de la playa: </p></div>
-        <div class="h4 text-secondary" ><p class=" font-weight-bold " id="status4"></p></div></div>
-        <div class="col-6  text-center  ">
-            <IMG id="img4" src="./assets/playa-balandra.jpg" width="400px"></IMG>
-        </div>
-
-
-
+</div>
 
         <!-- footer -->
     </div>
