--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
        
         <!--Mapa interactivo de México-->
-        <p class="text-primary h1 text-center">Encuentra tu playa limpia</p>
+        <p class="text-primary h1 text-center">Revisa el Status de las playas de cada estado</p>
     <div class="mapa text-center">
         <svg version="1.2" viewbox="0 0 1000 631" width="1000" xmlns="http://www.w3.org/2000/svg">
            <!-- 1 -->
