--- a/info.html
+++ b/info.html
@@ -67,13 +67,13 @@
     <div class="row align-items-center mt-5">
         <div class="col-1"></div>
         <div class=" col-4 mx-5"><div><p>Nombre de la playa: </p></div>
-        <div class="h4 text-info " ><p class=" font-weight-bold " id="playa1">Balandra</p></div>
+        <div class="h4 text-info " ><p class=" font-weight-bold " id="playa1"></p></div>
         <div><p>Municipio:  </p></div>
-        <div class="h4 text-secondary" ><p class=" font-weight-bold " id="municipio1">La paz</p></div>
+        <div class="h4 text-secondary" ><p class=" font-weight-bold " id="municipio1"></p></div>
         <div><p>Nivel de contaminación: </p></div>
-        <div class="h4 text-secondary d-inline" ><p class=" font-weight-bold  d-inline" id="nivel1">10 </p></div>
+        <div class="h4 text-secondary d-inline" ><p class=" font-weight-bold  d-inline" id="nivel1"></p></div>
         <div><p>Estado de la playa: </p></div>
-        <div class="h4 text-secondary" ><p class=" font-weight-bold " id="status1">APTO</p></div></div>
+        <div class="h4 text-secondary" ><p class=" font-weight-bold " id="status1"></p></div></div>
         <div class="col-6  text-center  ">
             <IMG  id="img1"src="./assets/playa-balandra.jpg" width="400px"></IMG>
         </div>
