--- a/Opinions.html
+++ b/Opinions.html
@@ -10,7 +10,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body onload="llenarOpiniones()">
 
     <div class="container fondo-container">
 
@@ -77,13 +77,13 @@
       <!-- 3descripción -->
       <div class="mb-3">
         <label for="description" class="form-label">Descripción: </label>
-        <input type="text" class="form-control" id="description" >
+        <input type="text" class="form-control" id="description"  >
       </div>
       
        <!-- 7Nombre de la playa -->
        <div class="mb-3">
         <label for="beachName" class="form-label">Nombre de la playa: </label>
-        <select class="form-select" aria-label="Default select example" id="beachName"> 
+        <select class="form-select" aria-label="Default select example" id="beachName" > 
           <option selected>Selecciona la playa</option>
           <option value="Playa de Tijuana">Playa de Tijuana</option>
           <option value="Playa Coromuel, El tecolote">Playa Coromuel, El tecolote</option>
@@ -108,13 +108,26 @@
       <!--imagen-->
       <div class="mb-3">
         <label for="imgFile" class="form-label">Foto: </label>
-        <input type="file" accept="image/png,image/jpeg" name="" id="imgFile">
+        <input type="file" accept="image/png,image/jpeg" name="" id="imgFile" >
         <!-- <input type="text" class="form-control" id="imgFile" > -->
 
       </div>
 
     <button type="button" class="btn btn-primary" onclick="mandarform()">Submit</button>
   </form>
+
+
+    <div class="mt-5">
+      <p class="h2 text-success text-center mt-5" >Opiniones de otros usuarios</p>
+
+      <!--playa 1-->
+    
+</div>
+    </div>
+
+
+
+
 
 
     </div>
