--- a/info.html
+++ b/info.html
@@ -50,7 +50,7 @@
               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./Opinions.html">Opiniones</a>
+            <a class="nav-link active" aria-current="page" href="./Opinions.html">Reportes</a>
           </li>                
                           
             
